--- a/package.json
+++ b/package.json
@@ -4,5 +4,23 @@
   "volta": {
     "node": "18.16.0",
     "yarn": "4.0.0-rc.42"
+  },
+  "scripts": {
+    "lint": "eslint ./src/**/*.ts",
+    "format": "yarn prettier --write ./src/**/*.ts"
+  },
+  "dependencies": {
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "@yarnpkg/sdks": "^3.0.0-rc.42",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7"
   }
 }
