--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "eslint ./src/**/*.ts",
     "format": "yarn prettier --write ./src/**/*.ts"
   },
-  "dependencies": {
-    "typescript": "^5.0.4"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -21,6 +18,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "typescript": "5.0.4"
   }
 }
