--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,10 @@
 {
-    "compilerOptions": {
-        "module": "ESNext",
-        "moduleResolution": "Node",
-        "target": "ES2020",
-        "strictNullChecks": true,
-        "strictFunctionTypes": true
-    },
-    "exclude": [
-        ".yarn",
-        "dist"
-    ]
+  "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "target": "ES2020",
+    "strictNullChecks": true,
+    "strictFunctionTypes": true
+  },
+  "exclude": [".yarn", "dist"]
 }
