--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "moduleResolution": "Node",
     "target": "ES2020",
     "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "strictFunctionTypes": true,
+    "allowImportingTsExtensions": true
   },
   "exclude": [".yarn", "dist"]
 }
