--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "typescript": "5.0.4"
+  },
+  "dependencies": {
+    "idb": "^7.1.1"
   }
 }
