--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "moduleResolution": "Node",
     "target": "ES2020",
     "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "allowImportingTsExtensions": true
+    "strictFunctionTypes": true
   },
-  "exclude": [".yarn", "dist"]
+  "exclude": [".yarn", "dist"],
+  "typeAcquisition": {
+    "include": ["jest"]
+  }
 }
