--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "Node",
+    "esModuleInterop": true,
     "target": "ES2020",
     "strictNullChecks": true,
     "strictFunctionTypes": true
