--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "yarn": "4.0.0-rc.42"
   },
   "scripts": {
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "lint": "eslint ./src/**/*.ts",
     "format": "yarn prettier --write ./src/**/*.ts",
     "test": "jest"
@@ -20,8 +23,10 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "fake-indexeddb": "^4.0.1",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "pinst": "^3.0.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
