--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postpack": "pinst --enable",
     "lint": "eslint ./src/**/*.ts",
     "format": "yarn prettier --write ./src/**/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "rm -Rf dist && tsc"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
