--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "Node",
+    "declaration": true,
     "esModuleInterop": true,
-    "target": "ES2020",
+    "target": "es2022",
     "strictNullChecks": true,
-    "strictFunctionTypes": true
+    "strictFunctionTypes": true,
+    "outDir": "dist",
+    "rootDir": "src"
   },
-  "exclude": [".yarn", "dist"],
+  "exclude": [".yarn", "dist", "src/**/*.test.ts", "jest.config.ts"],
   "typeAcquisition": {
     "include": ["jest"]
   }
